Linq multi / StackTrace/ Edit button
Linq multi fixed. Added StackTrace. Edit button fixed

--- a/MyWebSite/Views/Home/Rep.cshtml
+++ b/MyWebSite/Views/Home/Rep.cshtml
@@ -13,7 +13,8 @@
 
 <div class="rep">
     @{
-        var reports = DataBaseReader.GetReports();
+        var dbreader = new DataBaseReader();
+        var reports = dbreader.GetReports();
         foreach (var report in reports)
         {
             var user = VKapi.Interact(report.uid);
