--- a/MyWebSite/Views/Shared/Error.cshtml
+++ b/MyWebSite/Views/Shared/Error.cshtml
@@ -10,8 +10,6 @@
     <title>Ошибка</title>
 </head>
 <body>
-    <h2>
-        Произошла ошибка при обработке вашего запроса.
-    </h2>
+    <h2>Error bl</h2>
 </body>
 </html>
