--- a/MyWebSite/Content/reports.css
+++ b/MyWebSite/Content/reports.css
@@ -28,8 +28,9 @@
 }
 
 .report_date {
-    width: 100%;
+    width: 20%;
     text-align: right;
+    float: right;
 }
 
 #report_action {
@@ -50,6 +51,10 @@
     min-height: 200px;
 }
 
+#report_button, .report_edit, #edit_button, #delete_button, .report_date  {
+    margin-top: 1%;
+}
+
 #report_button, .report_edit, #edit_button, #delete_button {
     cursor: pointer;
     float: right;
@@ -58,7 +63,6 @@
     padding: 0 5px;
     min-height: 20px;
     text-align: center;
-    margin-top: 1%;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
