Delete dummy files

--- a/MyWebSite/Views/Shared/Light_Layout.cshtml
+++ b/MyWebSite/Views/Shared/Light_Layout.cshtml
@@ -56,7 +56,7 @@
                 VK.Widgets.Like("vk_like", { type: "button" });
             </script>
             <div id="counter">
-                <h3>Посещения</h3> <br/>
+                <h3>Ваши посещения</h3> <br/>
                 Всего: <div id="all"></div> <br/>
                 Сегодня: <div id="today"></div> <br/>
                 Последнее: <div id="last"></div> <br/>
