--- a/MyWebSite/Content/Site.css
+++ b/MyWebSite/Content/Site.css
@@ -5,7 +5,8 @@ a:link{border: none; color: #b71}
 html{height: 100%}
 body{ background-color: #000; height: 100%}
 #header, #content, #footer{margin: auto; width: 50%; overflow: auto}
-/*#header{ min-height: 20%}*/
+form * {background-color: black;}
+input , textarea {border: 1px solid #b71;}
 #content{ min-height: 70%; margin: 0 0 0 25%; float: left}
 #results {min-height: 70%; width: 20%; float: left; margin: 0 2%}
 #results * {margin-top: 2%}
@@ -23,14 +24,29 @@ body{ background-color: #000; height: 100%}
 .left *{float: left}
 .left img {width: 100%}
 #main { width: 100%; height: 100%}
-#menu{margin-top: 30px; float: left;width: 100%; padding-bottom: 5%; border-bottom: 1px solid #fff}
+#menu{margin-top: 30px; float: left; width: 100%; padding-bottom: 5%; border-bottom: 1px solid #fff}
 #menu li{float: left; list-style: none; width: 15%; margin: 0 3px; color: #fff}
 #menu li div{ text-align: center; font-size: 1.4em; cursor: pointer; padding: 2px}
-#menu li:hover, .target{
+#menu li:hover, .target, .button{
     background-color: #b71;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
+}
+.secret_box {
+    display: none;
+}
+#vote_button {
+    width: 200px;
+}
+#vote_content {
+    min-height: 200px;
+}
+.button {
+    cursor: pointer;
+    padding: 0 5px;
+    min-height: 20px;
+    text-align: center;
 }
 #footer div{width: 98%; text-align: center; margin: 2% 1% 0 1%; color: #fff; float: left; font-size: 1em}
 .bio_content * { margin-top: 30px; font-size: 1.2em;margin: auto; width: 100%}
