XML view for vote results
Added XML view for vote results
New base for music preferences
Bases Music_pref and Voting are linked together

--- a/MyWebSite/Views/Home/Vote.cshtml
+++ b/MyWebSite/Views/Home/Vote.cshtml
@@ -32,13 +32,13 @@
             </tr>
         </table>
         <h3>Какая музыка вам нравится?</h3> <br/>
-        <input type="checkbox" value="jazz"/> Джаз <br/>
-        <input type="checkbox" value="bluse" /> Блюз <br />
-        <input type="checkbox" value="flamenco" /> Фламенко <br />
-        <input type="checkbox" value="classic" /> Классика <br />
-        <input type="checkbox" value="rock" /> Рок <br />
-        <input type="checkbox" value="metal" /> Металл <br />
-        <input type="checkbox" value="other" /> Другое <br />
+        <input type="checkbox" name="pref" value="jazz"/> Джаз <br/>
+        <input type="checkbox" name="pref" value="bluse" /> Блюз <br />
+        <input type="checkbox" name="pref" value="flamenco" /> Фламенко <br />
+        <input type="checkbox" name="pref" value="classic" /> Классика <br />
+        <input type="checkbox" name="pref" value="rock" /> Рок <br />
+        <input type="checkbox" name="pref" value="metal" /> Металл <br />
+        <input type="checkbox" name="pref" value="other" /> Другое <br />
         <h3>Ваши впечатления о группе в целом</h3> <br/>
         <textarea placeholder="Ваши впечатления" name="text"></textarea> <br/>
         <input type="text" value="" class="secret_box"/>
