--- a/MyWebSite/Views/Shared/Light_Layout.cshtml
+++ b/MyWebSite/Views/Shared/Light_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using MyWebSite.Models
+<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -56,10 +57,13 @@
                 VK.Widgets.Like("vk_like", { type: "button" });
             </script>
             <div id="counter">
+                @{
+                    var cntobj = CounterIP.Count(Request.UserHostAddress);
+                }
                 <h3>Ваши посещения</h3> <br/>
-                Всего: <div id="all"></div> <br/>
-                Сегодня: <div id="today"></div> <br/>
-                Последнее: <div id="last"></div> <br/>
+                Всего: <div id="all">@Html.Raw(@cntobj.GetType().GetProperty("allcnt").GetValue(cntobj, null))</div> <br/>
+                Сегодня: <div id="today">@Html.Raw(@cntobj.GetType().GetProperty("todcnt").GetValue(cntobj, null))</div> <br/>
+                Последнее: <div id="last">@Html.Raw(@cntobj.GetType().GetProperty("last").GetValue(cntobj, null))</div> <br/>
                 @{ 
                     var browser_name = Request.Browser.Browser;
                     var browser_ver = Request.Browser.Version;
