--- a/MyWebSite/Content/Site.css
+++ b/MyWebSite/Content/Site.css
@@ -1,4 +1,6 @@
 ﻿*{ padding: 0;color: #fff;border: 0; font: 12px 'Verdana', 'Arial', sans-serif;}
+b {font-weight: bold}
+i {font-style: italic}
 a:visited{border: none; color: #b71}
 a:active{border: none; color: #b71}
 a:link{border: none; color: #b71}
