--- a/MyWebSite/Views/Home/Rep.cshtml
+++ b/MyWebSite/Views/Home/Rep.cshtml
@@ -28,7 +28,7 @@
                 </div>
                 <div class="report_id">@report.Id</div>
                 @{
-                    var html = report.content;
+                    var html = HttpUtility.HtmlEncode(report.content);
                     html = Regex.Replace(html, "&lt;b&gt;(.*?)&lt;/b&gt;", "<b>$1</b>");
                     html = Regex.Replace(html, "&lt;i&gt;(.*?)&lt;/i&gt;", "<i>$1</i>");
                     var text = Regex.Replace(html, "&lt;img(?:.*?)src=&quot;(.*?)&quot;(?:.*?)/&gt;", "<br/><img src=\"$1\"/><br/>");
