--- a/MyWebSite/Views/Home/Rep.cshtml
+++ b/MyWebSite/Views/Home/Rep.cshtml
@@ -56,7 +56,7 @@
             <input type="text" name="secret" id="secret_box" />
             <input type="text" name="type" class="secret_box" value="send">
             <button onclick="checkSecret(this)" type="submit" id="report_button">Отправить</button>
-            <div class="edit_info">Поддерживаются теги &lt;i&gt; &lt;b&gt; &lt;img src=...&gt;</div>
+            <div class="edit_info">Поддерживаются теги &lt;i&gt; &lt;b&gt; &lt;img src=&quot;...&quot;&gt;</div>
         </form>
     </div>
 </div>
