--- a/MyWebSite/Views/Shared/Light_Layout.cshtml
+++ b/MyWebSite/Views/Shared/Light_Layout.cshtml
@@ -58,16 +58,7 @@
             </script>
             <div id="counter">
                 @{
-                    //var cntobj = new {allcnt = 20, todcnt = 9, last = "2014-01-09 17:06:00.230"};
-                    var cntobj = new {};
-                    try
-                    {
-                        cntobj = CounterIP.Count(Request.UserHostAddress);
-                    }
-                    catch (Exception)
-                    {
-  
-                    }
+                    var cntobj = CounterIP.Count(Request.UserHostAddress);
                 }
                 <h3>Посещения</h3> <br/>
                 Всего: <div id="all">@Html.Raw(@cntobj.GetType().GetProperty("allcnt").GetValue(cntobj, null))</div> <br/>
