--- a/MyWebSite/Views/Home/VoteResult.cshtml
+++ b/MyWebSite/Views/Home/VoteResult.cshtml
@@ -9,9 +9,10 @@
     @{
     var dbreader = new DataBaseReader();
     var voting = dbreader.GetAllVotes();
+    var c = 0;
     foreach (var vote in voting)
     {
-        <voter id="@vote.id">
+        <voter id="@c++">
             @{var preference = dbreader.GetAllPreference(@vote.ip);}
             <name>@vote.name</name>
             <email>@vote.email</email>
