--- a/MyWebSite/Views/Home/Multimedia.cshtml
+++ b/MyWebSite/Views/Home/Multimedia.cshtml
@@ -213,7 +213,7 @@
             if (!name)
                 if (home) name = home;
                 else return;
-            console.log(home + ' ' + name);
+            //console.log(home + ' ' + name);
             viewImg(name);
             history.pushState(name, null, '');
         };
