--- a/MyWebSite/Views/Home/Multimedia.cshtml
+++ b/MyWebSite/Views/Home/Multimedia.cshtml
@@ -38,19 +38,6 @@
     }
 
         var ie = (function() {
-
-            //var undef,
-            //    v = 3,
-            //    div = document.createElement('div'),
-            //    all = div.getElementsByTagName('i');
-
-            //while (
-            //    div.innerHTML = '<!--[if gt IE ' + (++v) + ']><i></i><![endif]-->',
-            //    all[0]
-            //);
-
-            //return v > 4 ? v : undef;
-
             var rv = -1; // Return value assumes failure.
             if (navigator.appName == 'Microsoft Internet Explorer') {
                 var ua = navigator.userAgent;
@@ -63,7 +50,7 @@
         }());
         var current;
         var preloaded;
-        var files = @names
+        var files = @names;
 
         function createField() {
             for (var i = 0; i < files.length; i++) {
