--- a/MyWebSite/Views/Shared/Light_Layout.cshtml
+++ b/MyWebSite/Views/Shared/Light_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta charset="utf-8" />
     <title>Terra Flamenco @ViewBag.Title</title>
-
+    
     <script type="text/javascript" src="//vk.com/js/api/openapi.js?105"></script>
     <script type="text/javascript">
         VK.init({ apiId: 4094087 });
@@ -23,22 +23,22 @@
             </div>
             <ul id="menu">
                 <li>
-                    <div id="news" onclick="location.href='/news'">Новости</div>
+                    <div id="news"><a href='/news'>Новости</a></div>
                 </li>
                 <li>
-                    <div id="bio" onclick="location.href='/bio'">Биография</div>
+                    <div id="bio" ><a href='/bio'>Биография</a></div>
                 </li>
                 <li>
-                    <div id="multimedia" onclick="location.href='/multimedia'">Галерея</div>
+                    <div id="multimedia"><a href='/multimedia'>Галерея</a></div>
                 </li>
                 <li>
-                    <div id="concerts" onclick="location.href='/concerts'">Концерты</div>
+                    <div id="concerts"><a href='/concerts'>Концерты</a></div>
                 </li>
                 <li>
-                    <div id="rep" onclick="location.href='/rep'">Отзывы</div>
+                    <div id="rep"><a href='/rep'>Отзывы</a></div>
                 </li>
                 <li>
-                    <div id="contacts" onclick="location.href='/contacts'">Контакты</div>
+                    <div id="contacts"><a href='/contacts'>Контакты</a></div>
                 </li>
             </ul>
         </div>
