--- a/MyWebSite/Content/Site.css
+++ b/MyWebSite/Content/Site.css
@@ -26,9 +26,10 @@ input , textarea {border: 1px solid #b71;}
 .left *{float: left}
 .left img {width: 100%}
 #main { width: 100%; height: 100%}
-#menu{margin-top: 30px; float: left; width: 100%; padding-bottom: 5%; border-bottom: 1px solid #fff}
+#menu{margin-top: 30px; float: left; width: 100%; padding-bottom: 5%; border-bottom: 1px solid #fff;}
+#menu a {color: white; font-size: 1em;text-decoration: none; margin: 2px; display: inline-block}
 #menu li{float: left; list-style: none; width: 15%; margin: 0 3px; color: #fff}
-#menu li div{ text-align: center; font-size: 1.4em; cursor: pointer; padding: 2px}
+#menu li div{ text-align: center; font-size: 1.4em; cursor: pointer;}
 #menu li:hover, .target, .button{
     background-color: #b71;
     -webkit-border-radius: 5px;
