--- a/MyWebSite/Content/galery.css
+++ b/MyWebSite/Content/galery.css
@@ -4,6 +4,7 @@
 	width: 100%;
 	height: 100%;
     background: #000000;
+    -ms-opacity: 0.85;
     opacity: 0.85;
 }
 
@@ -34,6 +35,7 @@
     background-color: #b71;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
     border-radius: 5px;
 }
 
@@ -41,7 +43,7 @@
     position: fixed;
     height: 100%;
     top: -7%;
-    z-index: 1000;
+    z-index: 1;
 }
 
 #left, #right {
@@ -52,7 +54,8 @@
 }
 
 #left:hover, #right:hover {
-    background: #000000;
+    background: #000;
+    -ms-opacity: 0.1;
     opacity: 0.1;
 }
 
