fix graphic counter

--- a/MyWebSite/Views/Shared/Light_Layout.cshtml
+++ b/MyWebSite/Views/Shared/Light_Layout.cshtml
@@ -62,8 +62,9 @@
                     var cntobj = CounterIP.Count(Request.UserHostAddress);
                 }
                 <h3>Посещения</h3> <br/>
-                Всего: <div id="all">@Html.Raw(@cntobj.GetType().GetProperty("allcnt").GetValue(cntobj, null))</div> <br/>
-                Сегодня: <div id="today">@Html.Raw(@cntobj.GetType().GetProperty("todcnt").GetValue(cntobj, null))</div> <br/>
+                @Html.Raw(@cntobj.GetType().GetProperty("allcnt").GetValue(cntobj, null)) <br/>
+                @*Всего: <div id="all">@Html.Raw(@cntobj.GetType().GetProperty("allcnt").GetValue(cntobj, null))</div> <br/>
+                Сегодня: <div id="today">@Html.Raw(@cntobj.GetType().GetProperty("todcnt").GetValue(cntobj, null))</div> <br/>*@
                 Последнее: <div id="last">@Html.Raw(@cntobj.GetType().GetProperty("last").GetValue(cntobj, null))</div> <br/>
                 @{ 
                     var browser_name = Request.Browser.Browser;
